--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -227,6 +227,7 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <i class="bi bi-android2"></i>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
@@ -244,6 +245,7 @@
             target="_blank"
             rel="noopener"
           >
+
             <span>{{ item.title }}</span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -319,6 +321,7 @@
             />
           </svg>
         </a>
+
       </div>
     </div>
   </div>
