organizando os menus

--- a/client/src/app/components/estrutura/header/header.component.html
+++ b/client/src/app/components/estrutura/header/header.component.html
@@ -12,53 +12,25 @@
               <i class="ms-2 bi bi-house-door"></i> Home
             </a>
           </li>
-          <li>
-            <a routerLink="/projetos-page" class="nav-link text-white">
-              <i class="ms-2 bi bi-speedometer2"></i> Dashboard
-            </a>
-          </li>
-          <!-- <li>
-            <a routerLink="/projetos" class="nav-link text-white">
-              <i class="ms-2 bi bi-kanban"></i> Projetos
-            </a>
-          </li> -->
-
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="ms-2 bi bi-kanban"></i> Projetos
+              <i class="ms-2 bi bi-kanban"></i> Eventos
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <!-- <li><a class="dropdown-item" routerLink="/projetos-page">Projetos</a></li> -->
-              <li><a class="dropdown-item" routerLink="/projetos">Cadastrar Projeto</a></li>
-              <li><a class="dropdown-item" routerLink="/cadastra_membro">Cadastrar Membros</a></li>
-              <li><a class="dropdown-item" routerLink="/cadastra_parceiro">Cadastrar Parceiros</a></li>
+              <li><a class="dropdown-item" routerLink="/projetos">Cadastrar Evento</a></li>
+              <li><a class="dropdown-item" routerLink="/cadastra_membro">Consulta Evetnos</a></li>
             </ul>
           </li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="ms-2 bi bi-kanban"></i> Tarefas
+              <i class="ms-2 bi bi-kanban"></i> Acompanhamento
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="/cadastroTarefa">Cadastrar Tarefa</a></li>
-              <li><a class="dropdown-item" routerLink="/subTarefas">Cadastrar Sub-Tarefa</a></li>
+              <li><a class="dropdown-item" routerLink="/cadastroTarefa">Cadastrar Acompanhamento</a></li>
+              <li><a class="dropdown-item" routerLink="/subTarefas">Consulta Acompanhamento</a></li>
             </ul>
-          </li>
-
-          <!-- <li>
-            <a routerLink="/cronograma" class="nav-link text-white">
-              <i class="ms-2 bi bi-calendar3-range"></i> Cronograma
-            </a>
-          </li>
-          <li>
-            <a routerLink="/tarefas" class="nav-link text-white">
-              <i class="ms-2 bi bi-list-task"></i> Tarefas
-            </a>
-          </li> -->
-          <li>
-            <a routerLink="/reunioes" class="nav-link text-white">
-              <i class="ms-2 bi bi-calendar3"></i> Reuniões
-            </a>
           </li>
           <li>
             <button type="button" routerLink="/login" class="btn btn-light text-dark ms-2 me-2">Login</button>
