--- a/client/src/app/components/estrutura/header/header.component.html
+++ b/client/src/app/components/estrutura/header/header.component.html
@@ -9,7 +9,7 @@
         <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
           <li>
             <a routerLink="/home" class="nav-link text-white">
-              <i class="ms-2 bi bi-house-door"></i> Home
+              <i class="fa-solid fa-house-chimney"></i> Home
             </a>
           </li>
           <li class="nav-item dropdown">
@@ -25,7 +25,7 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="ms-2 bi bi-kanban"></i> Acompanhamento
+              <i class="fa-solid fa-handshake"></i> Acompanhamento
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="/cadastroTarefa">Cadastrar Acompanhamento</a></li>
