cadastro de eventos

--- a/client/src/app/components/estrutura/header/header.component.html
+++ b/client/src/app/components/estrutura/header/header.component.html
@@ -18,8 +18,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <!-- <li><a class="dropdown-item" routerLink="/projetos-page">Projetos</a></li> -->
-              <li><a class="dropdown-item" routerLink="/projetos">Cadastrar Evento</a></li>
-              <li><a class="dropdown-item" routerLink="/cadastra_membro">Consulta Evetnos</a></li>
+              <li><a class="dropdown-item" routerLink="/cadastroevento">Cadastrar Evento</a></li>
+              <li><a class="dropdown-item" routerLink="/acompanhaevento">Consulta Eventos</a></li>
             </ul>
           </li>
 
