--- a/client/src/app/components/estrutura/header/header.component.html
+++ b/client/src/app/components/estrutura/header/header.component.html
@@ -19,7 +19,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <!-- <li><a class="dropdown-item" routerLink="/projetos-page">Projetos</a></li> -->
               <li><a class="dropdown-item" routerLink="/cadastroevento">Cadastrar Evento</a></li>
-              <li><a class="dropdown-item" routerLink="/acompanhaevento">Consulta Eventos</a></li>
+              <li><a class="dropdown-item" routerLink="/consultaeventos">Consulta Eventos</a></li>
             </ul>
           </li>
 
@@ -28,8 +28,8 @@
               <i class="fa-solid fa-handshake"></i> Acompanhamento
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="/cadastroTarefa">Cadastrar Acompanhamento</a></li>
-              <li><a class="dropdown-item" routerLink="/subTarefas">Consulta Acompanhamento</a></li>
+              <li><a class="dropdown-item" routerLink="/cadastroacompanhamento">Cadastrar Acompanhamento</a></li>
+              <li><a class="dropdown-item" routerLink="/consultaacompanhamento">Consulta Acompanhamento</a></li>
             </ul>
           </li>
           <li>
