--- a/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
+++ b/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
@@ -1,37 +1,64 @@
 <section>
-  <div class="container-fluid">
+  <div class="container">
     <div class="bg-warning text-dark mt-3">
       <h3 class="pb-3 pt-3 text-center text-white">
         Eventos
       </h3>
     </div>
-    <!-- <div class="row">
-      <div class="form-floating col-sm-3 col-12 mt-2">
-        <input (input)="applyFilter($event)" #name type="text" class="form-control" id="name" placeholder="Pesquise aqui...">
-        <label class="form-label ms-3" for="name">Digite aqui a sua pesquisa</label>
 
-      </div>
-      <div class="form-floating col-sm-4 col-12 mt-2">
-        <select class="form-select" #sexec id="sexec" aria-label="Secretarias Executivas" (change)="(filtroColaborador(sexec.value))">
-          <option selected>Selecione a Secretaria Executiva</option>
-          <option value="Secretaria do Desenvolvimento Econômico">Secretaria do Desenvolvimento Econômico</option>
-          <option value="Secretaria Executiva da Indústria">Secretaria Executiva da Indústria</option>
-          <option value="Secretaria Executiva de Comércio, Serviços e Inovação">Secretaria Executiva de Comércio, Serviços e Inovação</option>
-          <option value="Secretaria Executiva de Planejamento e Gestão Interna">Secretaria Executiva de Planejamento e Gestão Interna</option>
-          <option value="Secretaria Executiva do Agronegócio">Secretaria Executiva do Agronegócio</option>
+    <div class="row">
+
+      <div class="form-floating col-12 mb-2">
+        <select name="sexec_id" id="sexec_id" class="form-select" #sexec_id (change)="(getEventoByRes(sexec_id.value))">
+          <option *ngFor=" let sexec of lista_sexec" [value]=sexec.id> {{ sexec.secretaria }} / {{ sexec.sigla }} </option>
         </select>
-        <label class="form-label ms-3" for="sexec">Secretaria Executiva</label>
+        <label class="form-label pergunta ms-3" for="cargo">Responável</label>
+      </div>
+    </div>
+
+    <div class="row mt-3 mb-3">
+      <div class="form-floating col-sm-2 col-12 mb-2">
+        <select name="mes" id="mes" class="form-select text-capitalize" #mes (change)="(getEventoByMes(mes.value))">
+          <option *ngFor=" let month of lista_mes" [value]=month> {{month}} </option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Mês</label>
       </div>
 
-      <div class="col-sm-5 col-12">
-        <div class="filter-nav d-flex flex-center mt-3 mb-3">
-          <button class="mx-2 btn btn-primary" (click)="selectedComissionado()">Cargo Comissionado</button>
-          <button class="mx-2 btn btn-secondary" (click)="selectedServidor()">Cargo Servidor</button>
-          <button class="mx-2 btn btn-info" (click)="selectedTerceirizado()">Cargo Terceirizado</button>
-          <button class="mx-2 btn btn-success" (click)="getColaboradors()">Todos Colaboradores</button>
-        </div>
+      <div class="form-floating col-sm-2 col-12 mb-2">
+        <select name="ano" id="ano" class="form-select"  #ano (change)="(getEventoByAno(ano.value))">
+          <option *ngFor=" let year of lista_ano" [value]=year> {{year}} </option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Ano</label>
       </div>
-    </div> -->
+
+      <div class="form-floating col-sm-2 col-12 mb-2">
+        <select name="tipo_local_id" id="tipo_local_id" class="form-select"  #tipo_evento_id (change)="(getEventoByLocal(tipo_evento_id.value))">
+          <option *ngFor=" let evento of lista_tipo_evento" [value]=evento.id> {{ evento.nome_evento }} </option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Tipo Evento</label>
+      </div>
+
+      <div class="form-floating col-sm-2 col-12 mb-2">
+        <select name="tipo_local_id" id="tipo_local_id" class="form-select"  #tipo_local_id (change)="(getEventoByLocal(tipo_local_id.value))">
+          <option *ngFor=" let local of lista_local" [value]=local.id> {{ local.local_evento }} </option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Tipo Local</label>
+      </div>
+
+      <div class="form-floating col-sm-2 col-12 mb-2">
+        <select name="recursos_id" id="recursos_id" class="form-select"  #recursos_id (change)="(getEventoByFonte(recursos_id.value))">
+          <option *ngFor=" let recursos of lista_recursos" [value]=recursos.id> {{ recursos.recursos }} </option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Fonte Recursos</label>
+      </div>
+
+      <div class="col-sm-2 col-12 mb-2">
+      <div class="filter-nav d-flex flex-center">
+        <button class="mx-3 btn btn-primary" (click)="getEventos()">Lista de <br>Eventos</button>
+      </div>
+    </div>
+    </div>
+
 
     <table class="table table-striped table-hover">
       <thead>
