--- a/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
+++ b/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
@@ -1,1 +1,123 @@
-<p>consulta-acompanhamento works!</p>
+<section>
+  <div class="container">
+    <div class="bg-warning text-dark mt-3">
+      <h3 class="pb-3 pt-3 text-center text-white">
+        Acompanhamentos
+      </h3>
+    </div>
+
+    <!-- <div class="row">
+
+      <div class="form-floating col-12 mb-2">
+        <select name="evento" id="evento" class="form-select" #evento (change)="(getFollowEvent(evento.value))">
+          <option *ngFor=" let evento of lista_evento" [value]=evento.id> {{ evento.nome_evento }} </option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Responável</label>
+      </div>
+    </div> -->
+
+    <div class="row mt-3 mb-3">
+      <div class="form-floating col-sm-6 col-12 mb-2">
+        <select name="stats" id="stats" class="form-select text-capitalize" #stats (change)="(getFollowStats(stats.value))">
+          <option value="A Iniciar">A Iniciar</option>
+          <option value="Andamento">Andamento</option>
+          <option value="Cancelado">Cancelado</option>
+          <option value="Concluído">Concluído</option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Mês</label>
+      </div>
+
+      <div class="col-sm-6 col-12 mb-2">
+        <div class="filter-nav d-flex flex-center">
+          <button class="mx-3 btn btn-primary" (click)="getFollows()">Lista de <br>Eventos</button>
+        </div>
+      </div>
+    </div>
+
+
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Nome Evento</th>
+          <th scope="col">Situação Atual</th>
+          <th scope="col">Resultado Alcançado</th>
+          <th scope="col">Custos Realizados</th>
+          <th scope="col">Leads Realizados</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let follow of lista_follow">
+          <td>{{ follow.ass_acompanhamento_evento.nome_evento }}</td>
+          <td>{{ follow.situacao_atual }}</td>
+          <td>{{ follow.resultado }}</td>
+          <td>{{ follow.custo_realizado }}</td>
+          <td>{{ follow.leads_realizados }}</td>
+          <td><button (click)="onEdit(follow)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
+          <td><button (click)="deletaFollow(follow)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+</section>
+
+<!-- Modal -->
+ <div class="modal fade" id="modalEdit" tabindex="-1" aria-labelledby="modalEditLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-scrollable mt-5">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalEditLabel">Editar Evento</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup] = "formFollow">
+          <div class="row">
+
+            <div class="form-floating col-sm-6 col-12 mb-2">
+              <select name="situacao_atual" id="situacao_atual" class="form-select" formControlName="situacao_atual" required>
+                <option value="A Iniciar">A Iniciar</option>
+                <option value="Andamento">Andamento</option>
+                <option value="Cancelado">Cancelado</option>
+                <option value="Concluído">Concluído</option>
+              </select>
+              <label class="form-label pergunta ms-3" for="cargo">Situação Atual</label>
+            </div>
+
+          </div>
+
+          <div class="row mt-4 mb-4">
+
+            <div class="form-group col-sm-4 col-12 ">
+              <div class="form-floating">
+                <input type="text" id="resultado" name="resultado"
+                  placeholder="Digite o nome do Evento" required formControlName="resultado" class="form-control" />
+                <label class="form-label pergunta" for="resultado">Resultado Alcançados</label>
+              </div>
+            </div>
+
+            <div class="form-group col-sm-4 col-12 ">
+              <div class="form-floating">
+                <input type="text" id="custo_realizado" name="custo_realizado"
+                  placeholder="Digite o nome do Evento" required formControlName="custo_realizado" class="form-control" />
+                <label class="form-label pergunta" for="custo_realizado">Custos Realizados</label>
+              </div>
+            </div>
+
+            <div class="form-group col-sm-4 col-12 ">
+              <div class="form-floating">
+                <input type="text" id="leads_realizados" name="leads_realizados"
+                  placeholder="Digite o nome do Evento" required formControlName="leads_realizados" class="form-control" />
+                <label class="form-label pergunta" for="leads_realizados">Leads Realizados</label>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" (click)="updateFollow()" class="btn btn-warning">Update</button>
+      </div>
+    </div>
+  </div>
+</div>
+
