--- a/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
+++ b/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
@@ -16,8 +16,8 @@
       </div>
     </div> -->
 
-    <div class="row mt-3 mb-3">
-      <div class="form-floating col-sm-6 col-12 mb-2">
+    <div class="row mt-3 mb-3 ">
+      <div class="form-floating col-sm-4 col-12 mb-2 mx-auto">
         <select name="stats" id="stats" class="form-select text-capitalize" #stats (change)="(getFollowStats(stats.value))">
           <option value="A Iniciar">A Iniciar</option>
           <option value="Andamento">Andamento</option>
@@ -27,7 +27,7 @@
         <label class="form-label pergunta ms-3" for="cargo">Mês</label>
       </div>
 
-      <div class="col-sm-6 col-12 mb-2">
+      <div class="col-sm-4 col-12 mb-2">
         <div class="filter-nav d-flex flex-center">
           <button class="mx-3 btn btn-primary" (click)="getFollows()">Lista de <br>Eventos</button>
         </div>
@@ -38,22 +38,22 @@
     <table class="table table-striped table-hover">
       <thead>
         <tr>
-          <th scope="col">Nome Evento</th>
-          <th scope="col">Situação Atual</th>
-          <th scope="col">Resultado Alcançado</th>
-          <th scope="col">Custos Realizados</th>
-          <th scope="col">Leads Realizados</th>
+          <th scope="col" class="align-middle text-center">Nome Evento</th>
+          <th scope="col" class="align-middle text-center">Situação Atual</th>
+          <th scope="col" class="align-middle text-center">Resultado Alcançado</th>
+          <th scope="col" class="align-middle text-center">Custos Realizados</th>
+          <th scope="col" class="align-middle text-center">Leads Realizados</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let follow of lista_follow">
-          <td>{{ follow.ass_acompanhamento_evento.nome_evento }}</td>
-          <td>{{ follow.situacao_atual }}</td>
-          <td>{{ follow.resultado }}</td>
-          <td>{{ follow.custo_realizado }}</td>
-          <td>{{ follow.leads_realizados }}</td>
-          <td><button (click)="onEdit(follow)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
-          <td><button (click)="deletaFollow(follow)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
+          <td class="align-middle">{{ follow.ass_acompanhamento_evento.nome_evento }}</td>
+          <td class="align-middle">{{ follow.situacao_atual }}</td>
+          <td class="align-middle">{{ follow.resultado }}</td>
+          <td class="align-middle">{{ follow.custo_realizado }}</td>
+          <td class="align-middle">{{ follow.leads_realizados }}</td>
+          <td class="align-middle"><button (click)="onEdit(follow)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
+          <td class="align-middle"><button (click)="deletaFollow(follow)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
         </tr>
       </tbody>
     </table>
