--- a/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
+++ b/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
@@ -63,30 +63,30 @@
     <table class="table table-striped table-hover">
       <thead>
         <tr>
-          <th scope="col">Nome Evento</th>
-          <th scope="col">Responsável</th>
-          <th scope="col">Mês</th>
-          <th scope="col">Ano</th>
-          <th scope="col">Tipo Evento</th>
-          <th scope="col">Local</th>
-          <th scope="col">Custo Prévio</th>
-          <th scope="col">Fonte recursos</th>
-          <th scope="col">Leads Previous</th>
+          <th scope="col" class="align-middle text-center">Nome Evento</th>
+          <th scope="col" class="align-middle text-center">Responsável</th>
+          <th scope="col" class="align-middle text-center">Mês</th>
+          <th scope="col" class="align-middle text-center">Ano</th>
+          <th scope="col" class="align-middle text-center">Tipo Evento</th>
+          <th scope="col" class="align-middle text-center">Local</th>
+          <th scope="col" class="align-middle text-center">Custo Prévio</th>
+          <th scope="col" class="align-middle text-center">Fonte recursos</th>
+          <th scope="col" class="align-middle text-center">Leads Previous</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let evento of lista_evento">
-          <td>{{ evento.nome_evento }}</td>
-          <td>{{ evento.ass_evento_sexec.secretaria }}</td>
-          <td>{{ evento.mes }}</td>
-          <td>{{ evento.ano }}</td>
-          <td>{{ evento.ass_evento_tipo.nome_evento }}</td>
-          <td>{{ evento.local }}</td>
-          <td>{{ evento.custo_previo }}</td>
-          <td>{{ evento.ass_evento_recursos.recursos }}</td>
-          <td>{{ evento.lead_previsto }}</td>
-          <td><button (click)="onEdit(evento)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
-          <td><button (click)="deletaEvento(evento)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
+          <td class="align-middle">{{ evento.nome_evento }}</td>
+          <td class="align-middle">{{ evento.ass_evento_sexec.secretaria }}</td>
+          <td class="align-middle">{{ evento.mes }}</td>
+          <td class="align-middle">{{ evento.ano }}</td>
+          <td class="align-middle">{{ evento.ass_evento_tipo.nome_evento }}</td>
+          <td class="align-middle">{{ evento.local }}</td>
+          <td class="align-middle">{{ evento.custo_previo }}</td>
+          <td class="align-middle">{{ evento.ass_evento_recursos.recursos }}</td>
+          <td class="align-middle">{{ evento.lead_previsto }}</td>
+          <td class="align-middle"><button (click)="onEdit(evento)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
+          <td class="align-middle"><button (click)="deletaEvento(evento)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
         </tr>
       </tbody>
     </table>
