alterando o css de cadstro e consulta

--- a/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
+++ b/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
-    <div class="bg-warning text-dark mt-3">
-      <h3 class="pb-3 pt-3 text-center text-white">
+    <div class="text-dark mt-3 cabecalho">
+      <h3 class="pb-3 pt-3 text-center text-white text-uppercase">
         Eventos
       </h3>
     </div>
