--- a/client/src/app/components/paginas/cadastro-evento/cadastro-evento.component.css
+++ b/client/src/app/components/paginas/cadastro-evento/cadastro-evento.component.css
@@ -19,3 +19,10 @@ legend {
 .cabecalho {
   background-color: #0d6efd;
 }
+
+.cabecalho h3 {
+  font-family: 'Kanit-Regular', 'Arial', sans-serif;
+  font-weight: bold;
+  font-size: clamp(2.70em, 1.4em + 1vw, 2.95em);
+  letter-spacing: 0.2em;
+}
