--- a/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.css
+++ b/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.css
@@ -1,3 +1,15 @@
+section {
+  margin: 1.2rem 0.8rem;
+  padding: 1.2rem 0.8rem;
+}
+
 .cabecalho {
   background-color: #0d6efd;
+}
+
+.cabecalho h3 {
+  font-family: 'Kanit-Regular', 'Arial', sans-serif;
+  font-weight: bold;
+  font-size: clamp(2.70em, 1.4em + 1vw, 2.95em);
+  letter-spacing: 0.2em;
 }
