--- a/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
+++ b/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
@@ -16,7 +16,7 @@
       </div>
     </div> -->
 
-    <div class="row mt-3 mb-3 ">
+    <div class="row mt-3 mb-3 pt-3">
       <div class="form-floating col-sm-4 col-12 mb-2 mx-auto">
         <select name="stats" id="stats" class="form-select text-capitalize" #stats (change)="(getFollowStats(stats.value))">
           <option value="A Iniciar">A Iniciar</option>
@@ -29,7 +29,7 @@
 
       <div class="col-sm-4 col-12 mb-2">
         <div class="filter-nav d-flex flex-center">
-          <button class="mx-3 btn btn-primary" (click)="getFollows()">Lista de <br>Eventos</button>
+          <button class="mx-3 mt-1 pt-3 pb-3 btn btn-primary text-uppercase fw-bold" (click)="getFollows()">Lista de Eventos</button>
         </div>
       </div>
     </div>
