--- a/client/src/app/components/paginas/home/home.component.html
+++ b/client/src/app/components/paginas/home/home.component.html
@@ -1,1 +1,36 @@
-<p>home works!</p>
+<div class="container-fluid">
+  <div class="row mt-5">
+    <div class="col-lg-10 offset-lg-1">
+      <div class="row">
+        <div class="col-sm-4 col-12">
+          <h3 class="text-center">Eventos por Ano</h3>
+          <canvas id="barchart"></canvas>
+        </div>
+        <div class="col-sm-4 col-12">
+          <h3 class="text-center">Tipos de Eventos</h3>
+          <canvas id="barcharttipo"></canvas>
+        </div>
+        <div class="col-sm-4 col-12">
+          <h3 class="text-center">Responsáveis</h3>
+          <canvas id="barchartresp"></canvas>
+        </div>
+      </div>
+
+      <div class="row mt-5">
+        <div class="col-sm-4 col-12">
+          <h3 class="text-center">Participação</h3>
+          <canvas id="barchartpart"></canvas>
+        </div>
+        <div class="col-sm-4 col-12">
+          <h3 class="text-center">Recursos</h3>
+          <canvas id="barchartrec"></canvas>
+        </div>
+        <div class="col-sm-4 col-12">
+          <h3 class="text-center">Local</h3>
+          <canvas id="barchartlocal"></canvas>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
