--- a/client/src/app/components/estrutura/header/header.component.html
+++ b/client/src/app/components/estrutura/header/header.component.html
@@ -7,7 +7,7 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-          <li>
+          <li *ngIf="profile === 1 || profile === 2 || profile === 3 || profile === 4">
             <a routerLink="/home" class="nav-link text-white">
               <i class="fa-solid fa-house-chimney"></i> Home
             </a>
@@ -18,8 +18,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <!-- <li><a class="dropdown-item" routerLink="/projetos-page">Projetos</a></li> -->
-              <li><a class="dropdown-item" routerLink="/cadastroevento">Cadastrar Evento</a></li>
-              <li><a class="dropdown-item" routerLink="/consultaeventos">Consulta Eventos</a></li>
+              <li *ngIf="profile === 2 || profile === 3"><a class="dropdown-item" routerLink="/cadastroevento">Cadastrar Evento</a></li>
+              <li *ngIf="profile === 1 || profile === 2 || profile === 3 || profile === 4"><a class="dropdown-item" routerLink="/consultaeventos">Consulta Eventos</a></li>
             </ul>
           </li>
 
@@ -28,8 +28,8 @@
               <i class="fa-solid fa-handshake"></i> Acompanhamento
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="/cadastroacompanhamento">Cadastrar Acompanhamento</a></li>
-              <li><a class="dropdown-item" routerLink="/consultaacompanhamento">Consulta Acompanhamento</a></li>
+              <li *ngIf="profile === 2 || profile === 3"><a class="dropdown-item" routerLink="/cadastroacompanhamento">Cadastrar Acompanhamento</a></li>
+              <li *ngIf="profile === 1 || profile === 2 || profile === 3 || profile === 4"><a class="dropdown-item" routerLink="/consultaacompanhamento">Consulta Acompanhamento</a></li>
             </ul>
           </li>
           <li *ngIf="!authenticated">
