ajuste do modal de imagens

--- a/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
+++ b/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
@@ -160,7 +160,7 @@
 
 <!--Modal de Exibição de imagens-->
 <div class="modal fade" id="modalViewImg" tabindex="-1" aria-labelledby="modalViewImgLabel" aria-hidden="true">
-  <div class="modal-dialog modal-xl modal-dialog-scrollable mt-5">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable mt-5">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="modalViewImgLabel">{{ showTitle }}</h1>
@@ -187,9 +187,9 @@
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
-            <div class="alert alert-danger" role="alert">
+            <!-- <div class="alert alert-danger" role="alert">
               {{ showMessage }}
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
