--- a/client/src/app/components/estrutura/header/header.component.html
+++ b/client/src/app/components/estrutura/header/header.component.html
@@ -12,6 +12,11 @@
               <i class="fa-solid fa-house-chimney"></i> Home
             </a>
           </li>
+          <li *ngIf="profile === 3">
+            <a routerLink="/users" class="nav-link text-white">
+              <i class="bi bi-person-fill"></i> Users
+            </a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="fa-solid fa-champagne-glasses"></i> Eventos
