--- a/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
+++ b/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
@@ -24,7 +24,7 @@
           <option value="Cancelado">Cancelado</option>
           <option value="Concluído">Concluído</option>
         </select>
-        <label class="form-label pergunta ms-3" for="cargo">Mês</label>
+        <label class="form-label pergunta ms-3" for="cargo">Status dos eventos</label>
       </div>
 
       <div class="col-sm-4 col-12 mb-2">
@@ -187,7 +187,7 @@
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
-            <!-- <div class="alert alert-danger" role="alert">
+            <!-- <div *ngIf="lista_imagens.length == 0" class="alert alert-danger" role="alert">
               {{ showMessage }}
             </div> -->
           </div>
