--- a/client/src/app/components/estrutura/header/header.component.html
+++ b/client/src/app/components/estrutura/header/header.component.html
@@ -40,7 +40,7 @@
           <li *ngIf="!authenticated">
             <button type="button" routerLink="/login" class="btn btn-light text-dark ms-2 me-2">Login</button>
           </li>
-          <li>
+          <li *ngIf="!authenticated">
             <button type="button" routerLink="/cadastro"class="btn btn-primary">Sign-up</button>
           </li>
           <li *ngIf="authenticated">
