--- a/client/src/app/components/paginas/users/users.component.html
+++ b/client/src/app/components/paginas/users/users.component.html
@@ -21,7 +21,7 @@
         <tr>
           <th scope="col" class="align-middle text-center">Nome Completo</th>
           <th scope="col" class="align-middle text-center">Email</th>
-          <th scope="col" class="align-middle text-center">Usuário Ativo?</th>
+          <th scope="col" class="align-middle text-center">Secretaria Executiva</th>
           <th scope="col" class="align-middle text-center">Perfil</th>
         </tr>
       </thead>
@@ -29,8 +29,7 @@
         <tr *ngFor="let user of lista_users">
           <td class="align-middle">{{ user.nome_completo }}</td>
           <td class="align-middle text-center">{{ user.user_email }}</td>
-          <td class="align-middle text-center form-switch"><input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" ></td>
-          <!-- <td class="align-middle">{{ user.user_active }}</td> -->
+          <td class="align-middle text-center">{{ user.ass_user_sexec.sigla }}</td>
           <td class="align-middle text-center">{{ user.ass_user_profile.perfil }}</td>
           <td class="align-middle text-center"><button (click)="onEdit(user)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
           <td class="align-middle text-center"><button (click)="deletaEvento(user)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
@@ -54,7 +53,7 @@
 
           <div class="row mt-4 mb-4">
 
-            <div class="form-group col-sm-4 col-12 ">
+            <div class="form-group col-sm-6 col-12 ">
               <div class="form-floating">
                 <input type="text" id="nome_completo" name="nome_completo"
                   placeholder="Nome completo" required formControlName="nome_completo" class="form-control" />
@@ -62,15 +61,16 @@
               </div>
             </div>
 
-            <div class="form-group col-sm-4 col-12 ">
+            <div class="form-group col-sm-6 col-12 ">
               <div class="form-floating">
                 <input type="text" id="user_email" name="user_email"
                   placeholder="Digite o email" required formControlName="user_email" class="form-control" />
                 <label class="form-label pergunta" for="user_email">Email</label>
               </div>
             </div>
-
-            <div class="form-floating col-sm-4 col-12 mb-2">
+          </div>
+          <div class="row mt-4 mb-4">
+            <div class="form-floating col-sm-5 col-12 mb-2">
               <select name="profile_id" id="profile_id" class="form-select text-capitalize" formControlName="profile_id" required>
                 <option value='1'> User </option>
                 <option value='2'> Coordenador </option>
@@ -80,6 +80,20 @@
               <label class="form-label pergunta ms-3" for="mes">Perfil do usuário</label>
             </div>
 
+            <div class="form-floating col-sm-5 col-12 mb-2">
+              <select name="sexec_id" id="sexec_id" class="form-select text-capitalize" formControlName="sexec_id" required>
+                <option value="" disabled selected>Insira a Secretaria Executiva</option>
+                <option *ngFor="let sexec of lista_sexec" [value]="sexec.id">{{ sexec.secretaria }}</option>
+              </select>
+              <label class="form-label pergunta ms-3" for="mes">Secretaria Executiva</label>
+            </div>
+
+            <div class="col-sm-2 col-12 mb-2">
+              <div class="form-check form-check-inline">
+                <label class="form-check-label" for="user_active">Usuário Ativo</label>
+                <input class="form-check-input" type="checkbox" id="user_active" formControlName="user_active" name="user_active" value=true>
+              </div>
+            </div>
           </div>
         </form>
       </div>
