--- a/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
+++ b/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
@@ -24,7 +24,7 @@
         <label class="form-label pergunta ms-3" for="cargo">Mês</label>
       </div>
 
-      <div class="form-floating col-sm-2 col-12 mb-2">
+      <div class="form-floating col-sm-1 col-12 mb-2">
         <select name="ano" id="ano" class="form-select"  #ano (change)="(getEventoByAno(ano.value))">
           <option *ngFor=" let year of lista_ano" [value]=year> {{year}} </option>
         </select>
@@ -55,6 +55,7 @@
       <div class="col-sm-2 col-12 mb-2">
       <div class="filter-nav d-flex flex-center">
         <button class="mx-3 mt-1 pt-1 pb-1 btn btn-primary text-uppercase fw-bold" (click)="getEventos()">Lista de Eventos</button>
+        <button class="mx-3 btn text-center btn-success text-uppercase fw-bold" data-bs-toggle="modal" data-bs-target="#modalTabela">Ver Tabela</button>
       </div>
     </div>
     </div>
@@ -82,7 +83,7 @@
           <td class="align-middle">{{ evento.ano }}</td>
           <td class="align-middle">{{ evento.ass_evento_tipo.nome_evento }}</td>
           <td class="align-middle">{{ evento.local }}</td>
-          <td class="align-middle">{{ evento.custo_previo }}</td>
+          <td class="align-middle">R$ {{ evento.custo_previo }}</td>
           <td class="align-middle">{{ evento.ass_evento_recursos.recursos }}</td>
           <td class="align-middle">{{ evento.lead_previsto }}</td>
           <td *ngIf="profile_id === 3 || profile_id === 2" class="align-middle"><button (click)="onEdit(evento)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
@@ -94,7 +95,7 @@
 
 </section>
 
-<!-- Modal -->
+<!-- Modal Editar-->
  <div class="modal fade" id="modalEdit" tabindex="-1" aria-labelledby="modalEditLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl modal-dialog-scrollable mt-5">
     <div class="modal-content">
@@ -233,6 +234,62 @@
       <div class="modal-footer">
         <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" (click)="updateEvento()" class="btn btn-warning">Update</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Tabela-->
+<div class="modal fade" id="modalTabela" tabindex="-1" aria-labelledby="modalTabelaLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-scrollable mt-5">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalTabelaLabel">Eventos</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body container">
+
+        <table class="table table-striped table-hover" id="table-evento">
+          <thead>
+            <tr>
+              <th scope="col" class="align-middle text-center">Nome Evento</th>
+              <th scope="col" class="align-middle text-center">Descrição</th>
+              <th scope="col" class="align-middle text-center">Responsável</th>
+              <th scope="col" class="align-middle text-center">Mês</th>
+              <th scope="col" class="align-middle text-center">Ano</th>
+              <th scope="col" class="align-middle text-center">Periodo</th>
+              <th scope="col" class="align-middle text-center">Publico Alvo</th>
+              <th scope="col" class="align-middle text-center">Tipo Evento</th>
+              <th scope="col" class="align-middle text-center">Local</th>
+              <th scope="col" class="align-middle text-center">Participação</th>
+              <th scope="col" class="align-middle text-center">Custo Prévio</th>
+              <th scope="col" class="align-middle text-center">Fonte recursos</th>
+              <th scope="col" class="align-middle text-center">Leads Previous</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let evento of lista_evento">
+              <td class="align-middle">{{ evento.nome_evento }}</td>
+              <td class="align-middle">{{ evento.descricao }}</td>
+              <td class="align-middle">{{ evento.ass_evento_sexec.secretaria }} - {{ evento.ass_evento_sexec.sigla }}</td>
+              <td class="align-middle">{{ evento.mes }}</td>
+              <td class="align-middle">{{ evento.ano }}</td>
+              <td class="align-middle">{{ evento.periodo }}</td>
+              <td class="align-middle">{{ evento.publico_alvo }}</td>
+              <td class="align-middle">{{ evento.ass_evento_tipo.nome_evento }}</td>
+              <td class="align-middle">{{ evento.local }}</td>
+              <td class="align-middle">{{ evento.ass_evento_participacao.participacao }}</td>
+              <td class="align-middle">R$ {{ evento.custo_previo }}</td>
+              <td class="align-middle">{{ evento.ass_evento_recursos.recursos }}</td>
+              <td class="align-middle">{{ evento.lead_previsto }}</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" (click)="getReport()" class="btn btn-warning">Exportar Planilha</button>
       </div>
     </div>
   </div>
