--- a/client/src/app/components/paginas/cadastro-evento/cadastro-evento.component.css
+++ b/client/src/app/components/paginas/cadastro-evento/cadastro-evento.component.css
@@ -4,7 +4,8 @@
 }
 
 fieldset {
-  margin: 0.8rem 0.8rem;
+  margin: 1.2rem 0.8rem;
+  padding: 1.2rem 0.8rem;
   border-color: #cecece;
   border-style: solid;
   border-width: 2px;
