remover planilha de acompanhamentos

--- a/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
+++ b/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
@@ -30,7 +30,7 @@
       <div class="col-sm-4 col-12 mb-2">
         <div class="filter-nav d-flex flex-center">
           <button class="mx-3 mt-1 pt-3 pb-3 btn btn-primary text-uppercase fw-bold" (click)="getFollows()">Lista de Eventos</button>
-          <button class="mx-3 btn text-center btn-success text-uppercase fw-bold" (click)="getReport()">Exportar<br>Planilha</button>
+          <!-- <button class="mx-3 btn text-center btn-success text-uppercase fw-bold" (click)="getReport()">Exportar<br>Planilha</button> -->
         </div>
       </div>
     </div>
